--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>My Free Website</title>
+</head>
+<body>
+  <h1>Welcome to my page!</h1>
+  <p>This is where I’ll add text and photos.</p>
+</body>
+</html>
