--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
   <h1>Welcome to my page!</h1>
   <p>This is where I’ll add text and photos.</p>
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/plain-monkes.png" width="400"> 
 </body>
 </html>
