--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <h1>Welcome to my page!</h1>
-  <p>This is where I’ll add text and photos.</p>
+  <p>My Name Is Eva Ruth.</p>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/plain-monkes.png" width="400"> 
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/this-worship.jpg" width="400"> 
 </body>
 </html>
