--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Free Website</title>
+  <title>Bunny Eva's Page</title>
 </head>
+
+<style>
+@font-face {
+  font-family: "Bradthen";
+  src: url("fonts/Bradthen-JRz5E.otf") format("opentype");
+}
+</style>
+
 <body>
+  <p style="font-family: 'Bradthen';">
+  This text uses my custom font!
+  </p>
   <h1>Welcome to my page!</h1>
   <p>My Name Is Eva Ruth.</p>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/plain-monkes.png" width="400"> 
   <br>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/this-worship.jpg" width="400"> 
 </body>
+  
 </html>
