--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 </style>
 
 <body>
-  <p style="font-family: 'Bradthen';">
-  This text uses my custom font!
-  </p>
-  <h1>Welcome to my page!</h1>
+  <h1 style="font-family: 'Bradthen';">
+  Welcome to my page!
+  </h1>
   <p>My Name Is Eva Ruth.</p>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/plain-monkes.png" width="400"> 
   <br>
