--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </style>
 
 <body>
-  <h1 style="font-family: 'Bradthen';">
-  Welcome to my page!
+  <h1 style="font-family: 'Bradthen'; font-size: 40px;">
+  Welcome to my page
   </h1>
   <p>My Name Is Eva Ruth.</p>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/plain-monkes.png" width="400"> 
