--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>Bunny Eva's Page</title>
+
+  <style>
+    @font-face {
+      font-family: "Bradthen";
+      src: url("fonts/Bradthen-JRz5E.otf") format("opentype");
+    }
+
+    h1 {
+      font-family: "Bradthen";
+      font-size: 200px;
+      font-weight: normal;   /* removes bold */
+      margin-bottom: 0;      /* removes gap under header */
+    }
+
+    p {
+      margin-top: 0;         /* removes gap above paragraph */
+    }
+  </style>
 </head>
 
-<style>
-@font-face {
-  font-family: "Bradthen";
-  src: url("fonts/Bradthen-JRz5E.otf") format("opentype");
-}
-</style>
-
 <body>
-  <h1 style="font-family: 'Bradthen'; font-size: 200px;">
-  Welcome to my page
-  </h1>
+  <h1>Welcome to my page</h1>
   <p>My Name Is Eva Ruth.</p>
-  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400"> 
-  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/this-worship.jpg" width="400"> 
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400">
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/this-worship.jpg" width="400">
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/townes.png" width="400">
 </body>
-  
+
 </html>
