--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     h1 {
       font-family: "Bradthen";
       font-size: 200px;
-      font-weight: normal;   /* removes bold */
-      margin-bottom: 0;      /* removes gap under header */
+      font-weight: normal;   
+      margin-bottom: 0;      
     }
 
     p {
-      margin-top: 0;         /* removes gap above paragraph */
+      margin-top: 0;     
     }
   </style>
 </head>
