--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <h1>Welcome to my page</h1>
-  <p>My Name Is Eva Ruth.</p>
+  <p>My Name Is Eva Ruth. I draw and paint.</p>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400">
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/this-worship.jpg" width="400">
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/townes.png" width="400">
