--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Bunny Eva's Page</title>
+  <title>Bunnie's Page</title>
 
   <style>
     @font-face {
@@ -14,7 +14,8 @@
       font-family: "Bradthen";
       font-size: 200px;
       font-weight: normal;   
-      margin-bottom: 0;      
+      margin-bottom: 0;
+      margin-top: 0;
     }
 
     p {
