--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 
 <body>
   <h1>Welcome to my page</h1>
-  <p>My Name Is Eva Ruth. I draw and paint.</p>
+  <p>My Name Is Eva Ruth.
+    <a href="art.html">I draw and paint.</a>
+  </p>
+  
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400">
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/this-worship.jpg" width="400">
 </body>
