--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
 <body>
   <h1>Welcome to my page</h1>
   <p>My Name Is Eva Ruth.
-    <a href="art.html">I draw and paint.</a>
+    <a href="art.html">I draw and paint</a> and <a href="erf.html">I love Earth</a> .
   </p>
-  
-  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400">
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/this-worship.jpg" width="400">
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400">
 </body>
 
 </html>
