--- a/erf.html
+++ b/erf.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
-<style>
-  body {
-    background-color: black;
-    color: white;
-  }
+<head>
+  <style>
+    body {
+      background-color: black;
+      color: white;
+    }
+  </style>
+</head>
+
+<body>
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/biolum.gif" width="400">
+</body>
 </html>
