--- a/index.html
+++ b/index.html
@@ -21,14 +21,30 @@
     p {
       margin-top: 0;     
     }
+        /* Put image next to title */
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    
+    .header img {
+      margin-left: 20px;
+    }
   </style>
 </head>
 
 <body>
+  <div class="header">
   <h1>Welcome to my page</h1>
+  <img src= "https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/eyeofhorus.png" width="50">
+  </div>
+  
   <p>My Name Is Eva Ruth.
-    <a href="art.html">I draw and paint</a> and <a href="erf.html">I love Earth</a> .
+    <a href="art.html">I draw and paint</a> and <a href="erf.html">I love Earth</a>.
   </p>
+  
+  <img src= "https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/paprika.jpg" width="200">
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/this-worship.jpg" width="400">
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400">
 </body>
