--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>Bunnie's Page</title>
 
   <style>
+    body {
+      background-color: black;
+    }
+    
     @font-face {
       font-family: "Bradthen";
       src: url("fonts/Bradthen-JRz5E.otf") format("opentype");
@@ -13,7 +17,8 @@
     h1 {
       font-family: "Bradthen";
       font-size: 200px;
-      font-weight: normal;   
+      font-weight: normal;
+      color: #cdebf9;
       margin-bottom: 0;
       margin-top: 0;
     }
