--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     }
 
     p {
-      margin-top: 0;     
+      margin-top: 0;
+      color: #0000ff;
     }
         /* Put image next to title */
     .header {
@@ -43,7 +44,6 @@
   <div class="header">
   <h1>Welcome to my page</h1>
   <img src= "https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/paprika.jpg" width="200">
-  <img src= "https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/eyeofhorus.png" width="100">
   </div>
   
   <p>My Name Is Eva Ruth.
