--- a/erf.html
+++ b/erf.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <p>Appreciation Begets Abundance 
+  </p>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/biolum.gif" width="200">
+  
 </body>
 </html>
