--- a/erf.html
+++ b/erf.html
@@ -6,11 +6,25 @@
       background-color: black;
       color: white;
     }
+    
+    h1 {
+      font-family: "Bradthen";
+      font-size: 200px;
+      font-weight: normal;
+      color: #cdebf9;
+      margin-bottom: 0;
+      margin-top: 0;
+    }
+
+    p {
+      font-size: 50px;
+      color: green;
+    }
   </style>
 </head>
 
 <body>
-  <p>Appreciation Begets Abundance 
+  <p>Appreciation Begets Abundance 𓂀
   </p>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/biolum.gif" width="200">
   
