--- a/erf.html
+++ b/erf.html
@@ -7,6 +7,11 @@
       color: white;
     }
     
+     @font-face {
+      font-family: "Pinyon Script";
+      src: url("fonts/PinyonScript-Regular.ttf") format("opentype");
+    }
+    
     h1 {
       font-family: "Bradthen";
       font-size: 200px;
@@ -17,7 +22,7 @@
     }
 
     p {
-      font-size: 50px;
+      font-size: 25px;
       color: green;
     }
   </style>
