--- a/erf.html
+++ b/erf.html
@@ -8,7 +8,7 @@
     }
     
      @font-face {
-      font-family: "Pinyon Script";
+      font-family: "Pinyon";
       src: url("fonts/PinyonScript-Regular.ttf") format("opentype");
     }
     
@@ -22,6 +22,7 @@
     }
 
     p {
+      font-family: "Pinyon";
       font-size: 25px;
       color: green;
     }
