--- a/art.html
+++ b/art.html
@@ -6,8 +6,12 @@
 </head>
 
 <body>
-  <h1>More About My Art</h1>
+  <h1>My Art</h1>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/townes.png" width="400">
   <p>Oil painting of Townes Van Zandt on cardboard</p>
+
+  <p>
+  <a href="artists-i-like.html">Artists I Like</a>
+  </p>
 </body>
 </html>
