--- a/erf.html
+++ b/erf.html
@@ -23,7 +23,7 @@
 
     p {
       font-family: "Pinyon";
-      font-size: 25px;
+      font-size: 40px;
       color: green;
     }
   </style>
@@ -33,6 +33,7 @@
   <p>Appreciation Begets Abundance 𓂀
   </p>
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/biolum.gif" width="200">
-  
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/bone.png" width="200">
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/despite%20all%20our%20accomplishments.png" width="400">
 </body>
 </html>
