--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </p>
   
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/this-worship.jpg" width="400">
-  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400">
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400"> <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/website.jpg" width="400">
 </body>
 
 </html>
