--- a/index.html
+++ b/index.html
@@ -41,17 +41,12 @@
 </head>
 
 <body>
-  <div class="header">
-  <h1>Welcome to my page</h1>
-  <img src= "https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/paprika.jpg" width="200">
-  </div>
+  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/header.png" width="1500">
   
   <p>My Name Is Eva Ruth.
-    <a href="art.html">I draw and paint</a> and <a href="erf.html">I love Earth</a>.
+    <a href="art.html">I draw and paint</a> and <a href="erf.html">I love Earth</a>. This is extra memory space to store my thoughts and document my life. 
   </p>
   
-  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/this-worship.jpg" width="400">
-  <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/plain-monkes.png" width="400"> <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/website.jpg" width="400">
 </body>
 
 </html>
