--- a/erf.html
+++ b/erf.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>I love Earth</title>
+
+
   <style>
     body {
       background-color: black;
@@ -26,10 +31,24 @@
       font-size: 40px;
       color: green;
     }
+    
+    .header {
+      display: flex;
+      align-items: center;
+    }
+
+    .header-img {
+      width: 100%;
+      max-width: 1200px;
+      height: auto;
+      display: block;
+    }
+
   </style>
 </head>
 
 <body>
+  <img class="header-img" src="https://github.com/sweetandnice/sweetandnice/blob/main/pics/ErfHeader.png">
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/biolum.gif" width="200">
 
 </body>
