--- a/erf.html
+++ b/erf.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-  <img class="header-img" src="https://github.com/sweetandnice/sweetandnice/blob/main/pics/ErfHeader.png">
+  <img class="header-img" src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/header-erf.png">
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/biolum.gif" width="200">
 
 </body>
