--- a/erf.html
+++ b/erf.html
@@ -33,18 +33,20 @@
       color: green;
     }
 
-    ..header {
-      display: flex;
-      align-items: center;
-    }
-    
     .header-img {
-      width: 100%;
-      max-width: 1200px;
+      flex: 0 0 75%;
+      max-width: 75%;
       height: auto;
       display: block;
     }
 
+    .gif {
+      flex: 0 0 25%;
+      max-width: 25%;
+      height: auto;
+      display: block;
+    }
+  
     @media (max-width: 768px) {
       h1 {
         font-size: 80px;
