--- a/erf.html
+++ b/erf.html
@@ -28,12 +28,11 @@
     }
 
     p {
-      font-family: "Pinyon";
-      font-size: 40px;
-      color: green;
+      font-size: 20px;
+      margin-top: 0;
+      color: #fff100;
     }
 
-    /* FIXED: proper flex container */
     .header {
       display: flex;
       align-items: center;
@@ -42,7 +41,6 @@
       overflow: hidden; /* prevents scrollbars */
     }
 
-    /* FIXED: scale by height, not width */
     .header img {
       height: 350px;   /* adjust this number to taste */
       width: auto;
@@ -50,7 +48,6 @@
       display: block;
     }
 
-    /* Mobile: shrink them a bit */
     @media (max-width: 600px) {
       .header img {
         height: 100px;
@@ -64,5 +61,8 @@
     <img class="header-img" src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/header-erf.png">
     <img class="gif" src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/biolum.gif">
   </div>
+  <p>I love Earth because it is a perfect self-contained cycle and it's all we have. As William Shatner tearfully attempted to express to Jeff Bezos after his trip to space (before Bezos dismissed him to celebrate with champagne), "The jeopardy, the moment you feel that vulnerability. This air which is keeping us alive is thinner than your skin. It’s a sliver, immeasurably small when you think in terms of the universe. Mars doesn’t really have it. There is life, and then there’s death."
+  </p>
+  
 </body>
 </html>
