--- a/art.html
+++ b/art.html
@@ -3,15 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <title>About My Art</title>
+
+  <style>
+    body {
+      background-color: black;
+      color: white;
+      margin: 0;
+      padding: 20px;
+      font-family: Arial, sans-serif;
+    }
+
+    h1 {
+      color: #ff008f;      /* pink title */
+      font-family: Arial;  /* title font */
+      font-size: 60px;
+      margin-top: 0;
+    }
+
+    p {
+      font-size: 20px;
+      color: white;
+    }
+
+    a {
+      color: #ff008f;      /* pink link */
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
   <h1>My Art</h1>
+
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/townes.png" width="400">
+
   <p>Oil painting of Townes Van Zandt on cardboard</p>
 
   <p>
-  <a href="artists-i-like.html">Artists I Like</a>
+    <a href="artists-i-like.html">Artists I Like</a>
   </p>
 </body>
 </html>
