--- a/art.html
+++ b/art.html
@@ -26,7 +26,7 @@
     }
 
     a {
-      color: #ff008f;      /* pink link */
+      color: #ff008f;      
       text-decoration: none;
     }
 
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <h1>My Art</h1>
+  <h1>Artmaking is worship to me :) <3 <3 <3 <3 <3</h1>
 
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/townes.png" width="400">
 
