--- a/art.html
+++ b/art.html
@@ -10,13 +10,13 @@
       color: white;
       margin: 0;
       padding: 20px;
-      font-family: Arial, sans-serif;
+      /* removed Arial so body uses default font */
     }
 
     h1 {
       color: #ff008f;      /* pink title */
-      font-family: Arial;  /* title font */
-      font-size: 50px;
+      font-family: Arial;  /* only the title uses Arial */
+      font-size: 60px;
       margin-top: 0;
     }
 
@@ -26,7 +26,7 @@
     }
 
     a {
-      color: #ff008f;      
+      color: #ff008f;      /* pink link */
       text-decoration: none;
     }
 
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <h1>Artmaking is worship to me :) <3 <3 <3 <3 <3</h1>
+  <h1>My Art</h1>
 
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/townes.png" width="400">
 
