--- a/art.html
+++ b/art.html
@@ -16,7 +16,7 @@
     h1 {
       color: #ff008f;      /* pink title */
       font-family: Arial;  /* only the title uses Arial */
-      font-size: 60px;
+      font-size: 50px;
       margin-top: 0;
     }
 
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <h1>My Art</h1>
+  <h1>Artmaking is worship to me :) <3 <3 <3 <3 <3</h1>
 
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/townes.png" width="400">
 
