--- a/art.html
+++ b/art.html
@@ -2,42 +2,25 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About My Art</title>
 
   <style>
     body {
       background-color: black;
-      color: white;
-      margin: 0;
-      padding: 20px;
-      /* removed Arial so body uses default font */
     }
-
-    h1 {
-      color: #ff008f;      /* pink title */
-      font-family: Arial;  /* only the title uses Arial */
-      font-size: 50px;
-      margin-top: 0;
-    }
-
+    
     p {
       font-size: 20px;
       color: white;
     }
-
-    a {
-      color: #ff008f;      /* pink link */
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
+    
   </style>
 </head>
 
 <body>
-  <h1>Artmaking is worship to me :) <3 <3 <3 <3 <3</h1>
+  <img class="header-img" src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/header-art.png">
 
   <img src="https://raw.githubusercontent.com/sweetandnice/sweetandnice/refs/heads/main/pics/townes.png" width="400">
 
