--- a/art.html
+++ b/art.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About My Art</title>
 
@@ -11,11 +10,17 @@
       background-color: black;
     }
     
+    .header-img {
+      height: 200px;   /* change this number to whatever feels right */
+      width: auto;
+      display: block;
+      margin-bottom: 20px;
+    }
+
     p {
       font-size: 20px;
       color: white;
     }
-    
   </style>
 </head>
 
